--- a/projet/makefile
+++ b/projet/makefile
@@ -1,11 +1,13 @@
 
 
-H5_INC=/usr/lib64/gfortran/modules
+H5_INC=-I/usr/lib64/gfortran/modules
 H5_LIB=
 #H5_INC=-I/usr/local/Cellar/hdf5/1.10.1/include/
 #H5_LIB=-L/usr/local/Cellar/hdf5/1.10.1/lib/ -lhdf5 -lhdf5_fortran  -lhdf5_hl
 
-all: exemple-1.x  exemple-2.x
+include conf.mk
+
+all: exemple-1.x  exemple-2.x exemple-3.x
 
 %.x: %.f90
 	mpif90 $^ -o $@ $(H5_INC) $(H5_LIB)
